# blink-game-engine

./: CMakeLists.txt  README.md
assets/: shader.glsl
assets/shaders/: color-light.glsl  shader.glsl
src/: Camera.cpp  Camera.h  Component.h  ComponentManager.cpp  ComponentManager.h  Entity.cpp  Entity.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Rendering.cpp  Rendering.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  World.cpp  World.h  main.cpp  stb_image_setup.cpp
src/components/: CameraComponent.cpp  CameraComponent.h  DynamicComponent.h  LightComponent.cpp  LightComponent.h  ModelComponent.cpp  ModelComponent.h  TransformComponent.cpp  TransformComponent.h
src/graphics/: Mesh.cpp  Mesh.h  Model.cpp  Model.h  Rendering.cpp  Rendering.h  Shader.cpp  Shader.h  Texture.cpp  UniformBlock.cpp  UniformBlock.h  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  stb_image_setup.cpp
src/systems/: DynamicSystem.cpp  DynamicSystem.h  ModelSystem.cpp  ModelSystem.h  ShaderSystem.cpp  ShaderSystem.h
